@startuml
entity Employee {
  * eid: INTEGER
  * name: TEXT
  * email: TEXT
  * gender: TEXT
  * contact: TEXT
  * dob: DATE
  * doj: DATE
  * pass: TEXT
  * utype: TEXT
  * address: TEXT
  * salary: REAL
}

entity Supplier {
  * supplier_id: INTEGER
  * invoice: TEXT
  * name: TEXT
  * contact: TEXT
  * desc: TEXT
}

entity Category {
  * cid: INTEGER
  * name: TEXT
}

entity Product {
  * pid: INTEGER
  * name: TEXT
  * price: REAL
  * qty: INTEGER
  * status: TEXT
  * supplier_id: INTEGER
  * category_id: INTEGER
}

entity Customer {
  * customer_id: INTEGER
  * name: TEXT
  * contact: TEXT
}

entity Bill {
  * bill_id: INTEGER
  * invoice_number: TEXT
  * customer_id: INTEGER
  * bill_date: DATE
  * total_amount: REAL
  * discount_given: REAL
  * net_amount: REAL
}

entity BillItem {
  * item_id: INTEGER
  * bill_id: INTEGER
  * product_id: INTEGER
  * quantity: INTEGER
  * price_per_unit: REAL
  * total_price: REAL
}

Employee ||--|| Bill : "generated by"
Supplier ||--o{ Product : "supplies"
Category ||--o{ Product : "categorizes"
Customer ||--o{ Bill : "has"
Bill ||--o{ BillItem : "contains"
Product ||--o{ BillItem : "includes"
@enduml
